--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 </head>
 <body>
     
-<h1 class="titulo">Entrar</h1>
+<h1 class="titulo">Login</h1>
 <input type="text" class="email" placeholder="E-mail">
 <input type="password" class="senha" placeholder="Senha">
+<button class="bentrar">Entrar</button>
+<a href="" class="texto">Esqueceu a senha?</a>
+
+<button class="bcconta">Criar conta</button>
 
 </body>
 </html>
